@@ -1,6 +1,12 @@
 2007-04-01  Benoît Dejean  <benoit@placenet.org>
 
 	* src/disks.cpp:
+
+	Simplified the treeview construction by reordering columns.
+
+2007-04-01  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.cpp:
 	
 	More debug prints.
 
